update header responsive  and hamburgreMenue animation

--- a/index.html
+++ b/index.html
@@ -13,57 +13,64 @@
   </head>
   <body dir="rtl">
     <header class="header">
-      <div class="navbar">
-        <div class="hamburgerMenu">
-          <i class="fa-solid fa-bars"></i>
-        </div>
+      <div class="width-container">
+        <div class="navbar">
+          <div class="hamburgerMenu">
+            <i class="fa-solid fa-bars"></i>
+          </div>
 
-        <ul>
-          <li class="search menuLeft">
-            <a href="#">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="hamburgerMenuContainer">
-        <ul>
-          <li>
-            <a href="#" class="active">
-              <img src="./images/house.png" alt="home" />
-              <p>خانه</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/magnifier.png" alt="search" />
-              <p>جستوجوی مشاغل</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/sparkles.png" alt="sparkles" />
-              <p>رزومه‌ساز</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/gemstone.png" alt="gemstone" />
-              <p>شرکت برتر</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <a href="#">
-        <img src="./images/logo.png" alt="logo" class="logo" />
-      </a>
-      <div class="login">
-        <a href="#" class="bell user-right">
-          <i class="fa-solid fa-bell"></i>
+          <ul>
+            <li class="search menuLeft">
+              <a href="#">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburgerMenuContainer">
+          <ul>
+            <li>
+              <a href="#" class="active">
+                <img src="./images/house.png" alt="home" />
+                <p>خانه</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/magnifier.png" alt="search" />
+                <p>جستوجوی مشاغل</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/sparkles.png" alt="sparkles" />
+                <p>رزومه‌ساز</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/gemstone.png" alt="gemstone" />
+                <p>شرکت برتر</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <a href="#" class="logo-container">
+          <img src="./images/logo.png" alt="logo" class="logo" />
         </a>
-        <a href="#" class="user">
-          <i class="fa-solid fa-user"></i>
-        </a>
+        <div class="login">
+          <a href="#" class="bell user-right">
+            <i class="fa-solid fa-bell"></i>
+          </a>
+          <a href="#" class="user">
+            <i class="fa-solid fa-user"></i>
+          </a>
+          <div class="user-container">
+            <i class="fa-solid fa-user"></i>
+            <span>User Name</span>
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
       </div>
     </header>
 
