creat Tools container

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
             <i class="fa-solid fa-user"></i>
             <span>User Name</span>
             <i class="fa-solid fa-chevron-down"></i>
+
+            <div class="moreTools">
+              <ul>
+                <li><a href="#">درخواست های من</a></li>
+                <li><a href="#">ایمیل‌های‌اطلاع‌رسانی‌من</a></li>
+                <li><a href="#">فرصت‌های‌ شغلی نشان‌داده‌شده</a></li>
+                <li><a href="#">فرصت های شغلی‌ پیشنهادی</a></li>
+                <li><a href="#">رزومه‌ساز</a></li>
+                <li><a href="#">مشاهده رزومه</a></li>
+                <li><a href="#">تنظیمات حساب کاربری من</a></li>
+                <li><a href="#">خروج</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
