click outside menu and close

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="width-container">
         <div class="navbar">
-          <div class="hamburgerMenu">
+          <div class="hamburgerMenu" >
             <i class="fa-solid fa-bars"></i>
           </div>
 
@@ -30,56 +30,56 @@
         <div class="hamburgerMenuContainer">
           <ul>
             <li>
-              <a href="#" class="active">
-                <img src="./images/house.png" alt="home" />
-                <p>خانه</p>
+              <a href="#" class="active" id="menuToggle">
+                <img src="./images/house.png" alt="home" id="menuToggle"/>
+                <p id="menuToggle">خانه</p>
               </a>
             </li>
             <li>
-              <a href="#">
-                <img src="./images/magnifier.png" alt="search" />
-                <p>جستوجوی مشاغل</p>
+              <a href="#" id="menuToggle">
+                <img src="./images/magnifier.png" alt="search" id="menuToggle"/>
+                <p id="menuToggle">جستوجوی مشاغل</p>
               </a>
             </li>
             <li>
-              <a href="#">
-                <img src="./images/sparkles.png" alt="sparkles" />
-                <p>رزومه‌ساز</p>
+              <a href="#" id="menuToggle">
+                <img src="./images/sparkles.png" alt="sparkles" id="menuToggle"/>
+                <p id="menuToggle">رزومه‌ساز</p>
               </a>
             </li>
             <li>
-              <a href="#">
-                <img src="./images/gemstone.png" alt="gemstone" />
-                <p>شرکت برتر</p>
+              <a href="#" id="menuToggle">
+                <img src="./images/gemstone.png" alt="gemstone" id="menuToggle"/>
+                <p id="menuToggle">شرکت برتر</p>
               </a>
             </li>
           </ul>
         </div>
         <a href="#" class="logo-container">
-          <img src="./images/logo.png" alt="logo" class="logo" />
+          <img src="./images/logo.png" alt="logo" class="logo" id="menuToggle"/>
         </a>
-        <div class="login">
+        <div class="login" id="toolsToggle">
           <a href="#" class="bell user-right">
-            <i class="fa-solid fa-bell"></i>
+            <i class="fa-solid fa-bell" id="toolsToggle"></i>
           </a>
           <a href="#" class="user">
-            <i class="fa-solid fa-user"></i>
+            <i class="fa-solid fa-user" id="toolsToggle"></i>
           </a>
-          <div class="user-container">
-            <i class="fa-solid fa-user"></i>
-            <span>User Name</span>
-            <i class="fa-solid fa-chevron-down"></i>
+          <div class="user-container" id="toolsToggle">
+            <i class="fa-solid fa-user" id="toolsToggle"></i>
+            <span id="toolsToggle">User Name</span>
+            <i class="fa-solid fa-chevron-down" id="toolsToggle"></i>
 
             <div class="moreTools">
               <ul>
-                <li><a href="#">درخواست های من</a></li>
-                <li><a href="#">ایمیل‌های‌اطلاع‌رسانی‌من</a></li>
-                <li><a href="#">فرصت‌های‌ شغلی نشان‌داده‌شده</a></li>
-                <li><a href="#">فرصت های شغلی‌ پیشنهادی</a></li>
-                <li><a href="#">رزومه‌ساز</a></li>
-                <li><a href="#">مشاهده رزومه</a></li>
-                <li><a href="#">تنظیمات حساب کاربری من</a></li>
-                <li><a href="#">خروج</a></li>
+                <li><a id="toolsToggle" href="#">درخواست های من</a></li>
+                <li><a id="toolsToggle" href="#">ایمیل‌های‌اطلاع‌رسانی‌من</a></li>
+                <li><a id="toolsToggle" href="#">فرصت‌های‌ شغلی نشان‌داده‌شده</a></li>
+                <li><a id="toolsToggle" href="#">فرصت های شغلی‌ پیشنهادی</a></li>
+                <li><a id="toolsToggle" href="#">رزومه‌ساز</a></li>
+                <li><a id="toolsToggle" href="#">مشاهده رزومه</a></li>
+                <li><a id="toolsToggle" href="#">تنظیمات حساب کاربری من</a></li>
+                <li><a id="toolsToggle" href="#">خروج</a></li>
               </ul>
             </div>
           </div>
