craet top section for mobile design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="width-container">
         <div class="navbar">
-          <div class="hamburgerMenu" >
+          <div class="hamburgerMenu">
             <i class="fa-solid fa-bars"></i>
           </div>
 
@@ -31,32 +31,49 @@
           <ul>
             <li>
               <a href="#" class="active" id="menuToggle">
-                <img src="./images/house.png" alt="home" id="menuToggle"/>
+                <img src="./images/house.png" alt="home" id="menuToggle" />
                 <p id="menuToggle">خانه</p>
               </a>
             </li>
             <li>
               <a href="#" id="menuToggle">
-                <img src="./images/magnifier.png" alt="search" id="menuToggle"/>
+                <img
+                  src="./images/magnifier.png"
+                  alt="search"
+                  id="menuToggle"
+                />
                 <p id="menuToggle">جستوجوی مشاغل</p>
               </a>
             </li>
             <li>
               <a href="#" id="menuToggle">
-                <img src="./images/sparkles.png" alt="sparkles" id="menuToggle"/>
+                <img
+                  src="./images/sparkles.png"
+                  alt="sparkles"
+                  id="menuToggle"
+                />
                 <p id="menuToggle">رزومه‌ساز</p>
               </a>
             </li>
             <li>
               <a href="#" id="menuToggle">
-                <img src="./images/gemstone.png" alt="gemstone" id="menuToggle"/>
+                <img
+                  src="./images/gemstone.png"
+                  alt="gemstone"
+                  id="menuToggle"
+                />
                 <p id="menuToggle">شرکت برتر</p>
               </a>
             </li>
           </ul>
         </div>
         <a href="#" class="logo-container">
-          <img src="./images/logo.png" alt="logo" class="logo" id="menuToggle"/>
+          <img
+            src="./images/logo.png"
+            alt="logo"
+            class="logo"
+            id="menuToggle"
+          />
         </a>
         <div class="login" id="toolsToggle">
           <a href="#" class="bell user-right">
@@ -73,9 +90,15 @@
             <div class="moreTools">
               <ul>
                 <li><a id="toolsToggle" href="#">درخواست های من</a></li>
-                <li><a id="toolsToggle" href="#">ایمیل‌های‌اطلاع‌رسانی‌من</a></li>
-                <li><a id="toolsToggle" href="#">فرصت‌های‌ شغلی نشان‌داده‌شده</a></li>
-                <li><a id="toolsToggle" href="#">فرصت های شغلی‌ پیشنهادی</a></li>
+                <li>
+                  <a id="toolsToggle" href="#">ایمیل‌های‌اطلاع‌رسانی‌من</a>
+                </li>
+                <li>
+                  <a id="toolsToggle" href="#">فرصت‌های‌ شغلی نشان‌داده‌شده</a>
+                </li>
+                <li>
+                  <a id="toolsToggle" href="#">فرصت های شغلی‌ پیشنهادی</a>
+                </li>
                 <li><a id="toolsToggle" href="#">رزومه‌ساز</a></li>
                 <li><a id="toolsToggle" href="#">مشاهده رزومه</a></li>
                 <li><a id="toolsToggle" href="#">تنظیمات حساب کاربری من</a></li>
@@ -87,9 +110,44 @@
       </div>
     </header>
 
-    <main>
-      
-    </main>
+    <section class="section-search">
+      <div class="main-content">
+        <div class="Introduction">
+          <h1>
+            <a href="#">۲۴,۱۰۸</a>
+            آگهی استخدام فعال در
+            <a href="#">۸,۸۶۹ </a>
+            شرکت ایرانی
+          </h1>
+          <p>
+            <span>#</span>
+            جابینجا: سامانه کاریابی آنلاین با بیشترین تعداد آگهی استخدام در
+            ایران
+          </p>
+        </div>
+        <div class="serachBox">
+          <form action="#">
+            <label for="job">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <input
+                placeholder="عنوان شغلی, مهارت یا..."
+                type="text"
+                id="job"
+              />
+            </label>
+            <button type="button">
+              <a>جستوجو در مشاغل</a>
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="all">
+        <a href="#">مشاهده همه آگهی‌های استخدام</a>
+      </div>
+    </section>
+    
+
+    <main></main>
 
     <script src="./script.js"></script>
   </body>
