update  top header design for min width 780px

--- a/index.html
+++ b/index.html
@@ -141,11 +141,19 @@
           </form>
         </div>
       </div>
+      <div class="last">
+        <div class="load">
+          <!-- <div class="border"></div> -->
+        </div>
+        <p>
+          آخرین رزومه ارسالی به شرکت
+          <a href="#">سفر مارکت</a>
+        </p>
+      </div>
       <div class="all">
         <a href="#">مشاهده همه آگهی‌های استخدام</a>
       </div>
     </section>
-    
 
     <main></main>
 
