creat top Header serach box

--- a/index.html
+++ b/index.html
@@ -130,11 +130,38 @@
             <label for="job">
               <i class="fa-solid fa-magnifying-glass"></i>
               <input
+                class="job"
                 placeholder="عنوان شغلی, مهارت یا..."
                 type="text"
                 id="job"
               />
             </label>
+            <div class="selectCity">
+              <span class="fa-solid fa-location-dot loc"></span>
+              <span class="city"> همه‌ی استان‌ها </span>
+              <span class="fa-solid fa-chevron-down arrow"></span>
+              <div class="items">
+                <input type="text" placeholder="جستجو..." class="toggleInput">
+                <ul>
+                  <li class="cityItem">همه‌ی استان‌ها</li>
+                  <li class="cityItem">مازندران</li>
+                  <li class="cityItem">تهران</li>
+                  <li class="cityItem">شیراز</li>
+                  <li class="cityItem">مشهد</li>
+                  <li class="cityItem">آذربایجان شرقی</li>
+                  <li class="cityItem">اردبیل</li>
+                  <li class="cityItem">اصفهان</li>
+                  <li class="cityItem">البرز</li>
+                  <li class="cityItem">ایلام</li>
+                  <li class="cityItem">بوشهر</li>
+                  <li class="cityItem">تهران</li>
+                  <li class="cityItem">خراسان</li>
+                  <li class="cityItem">خوزستان</li>
+                </ul>
+              </div>
+            </div>
+            <div class="selectCity">
+            </div>
             <button type="button">
               <a>جستوجو در مشاغل</a>
             </button>
@@ -154,6 +181,9 @@
         <a href="#">مشاهده همه آگهی‌های استخدام</a>
       </div>
     </section>
+
+
+    
 
     <main></main>
 
