--- a/index.html
+++ b/index.html
@@ -182,6 +182,51 @@
       </div>
     </section>
 
+    <section class="top-item">
+      <div class="container">
+        <div class="item">
+          <a href="#">
+            <img src="./images/main.webp" alt="image">
+            <p>دیپوینت</p>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="./images/todi.webp" alt="image">
+            <p>دیپوینت</p>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="./images/main1.webp" alt="image">
+            <p>دیپوینت</p>
+          </a>
+        </div>
+      </div>
+
+      
+      <div class="container">
+        <div class="item">
+          <a href="#">
+            <img src="./images/depoint.webp" alt="image">
+            <p>دیپوینت</p>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="./images/banimode.webp" alt="image">
+            <p>دیپوینت</p>
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="./images/faradars.webp" alt="image">
+            <p>دیپوینت</p>
+          </a>
+        </div>
+      </div>
+    </section>
+
 
     
 
