create main section and Handler script

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </form>
         </div>
       </div>
-      <div class="last">
+      <div class="lastSearch">
         <div class="load">
           <!-- <div class="border"></div> -->
         </div>
@@ -230,7 +230,59 @@
 
     
 
-    <main></main>
+    <main>
+      <section class="Landing">
+        <div class="today">
+          <h4 class="heading">استخدام‌های فوری امروز</h1>
+            <div class="items">
+              <!-- <a class="item" href="#">
+                <span class="fast">فوری</span>
+                <h6>استخدام کارشناس سئو (SEO)</h6>
+                <div class="more">
+                  <div>
+                    <i class="fa-solid fa-hotel"></i>
+                    <span>کافه نخبگان</span>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span>تهران</span>
+                  </div>
+                </div>
+              </a> -->
+             
+            </div>
+        </div>
+
+        <div class="last">
+          <h4 class="heading">آخرین آگهی‌ها</h4>
+          <ul>
+            <!-- <li class="item">
+              <a href="#">
+                <h6>
+                  استخدام کارشناس دیجیتال مارکتینگ
+                </h6>
+                <div class="more">
+                  <div>
+                    <i class="fa-solid fa-hotel"></i>
+                    <span> آپارات</span>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span>تهران</span>
+                  </div>
+                </div>
+                <span class="in">امروز</span>
+              </a>
+            </li> -->
+          </ul>
+          <div class="seeAll">
+            <a href="#">
+              مشاهده همه »
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="./script.js"></script>
   </body>
