update style and html file

--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@
         <div class="item">
           <a href="#">
             <img src="./images/main.webp" alt="image">
-            <p>دیپوینت</p>
+            <p>مارکت</p>
           </a>
         </div>
         <div class="item">
           <a href="#">
             <img src="./images/todi.webp" alt="image">
-            <p>دیپوینت</p>
+            <p>فلای تودی</p>
           </a>
         </div>
         <div class="item">
           <a href="#">
             <img src="./images/main1.webp" alt="image">
-            <p>دیپوینت</p>
+            <p>ناک</p>
           </a>
         </div>
       </div>
@@ -215,13 +215,13 @@
         <div class="item">
           <a href="#">
             <img src="./images/banimode.webp" alt="image">
-            <p>دیپوینت</p>
+            <p>بانی مود</p>
           </a>
         </div>
         <div class="item">
           <a href="#">
             <img src="./images/faradars.webp" alt="image">
-            <p>دیپوینت</p>
+            <p>فرادرس</p>
           </a>
         </div>
       </div>
