add Font IranSanss and update font size and more styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./style.css" />
+    //font
+    <link rel="stylesheet" href="./fonts/font-face.css">
   </head>
   <body dir="rtl">
     <header class="header">
@@ -62,7 +64,7 @@
                   alt="gemstone"
                   id="menuToggle"
                 />
-                <p id="menuToggle">شرکت برتر</p>
+                <p id="menuToggle"> 50 شرکت برتر </p>
               </a>
             </li>
           </ul>
