Create footer section

--- a/index.html
+++ b/index.html
@@ -619,8 +619,67 @@
             </div>
           </div>
           </article>
-
     </main>
+
+    <footer>
+      <div class="containerFooter">
+
+      <div class="links">
+        <div class="item">
+          <h6>
+            کارجویان
+            <i class="fa-solid fa-angle-down"></i>
+          </h6>
+          <ul id="ul1">
+            <li><a href="#">آگهی‌های استخدام</a></li>
+            <li><a href="#">ایمیل‌های اطلاع‌رسانی</a></li>
+            <li><a href="#">رزومه‌ساز آنلاین</a></li>
+            <li><a href="#">آشنایی با شرکت‌ها</a></li>
+          </ul>
+        </div>
+        <div class="item">
+          <h6>
+            میانبرها
+            <i class="fa-solid fa-angle-down"></i>
+          </h6>
+          <ul id="ul2">
+            <li><a href="#">درخواست‌های من</a></li>
+            <li><a href="#">ایمیل‌های اطلاع‌رسانی من</a></li>
+            <li><a href="#">رزومه‌ساز</a></li>
+            <li><a href="#">رزومه‌ساز</a></li>
+            <li><a href="#">تنظیمات حساب کاربری</a></li>
+            <li><a href="#">فرصت‌های شغلی پیشنهادی من</a></li>
+          </ul>
+        </div>
+        <div class="item">
+          <h6>
+            جابینجا
+            <i class="fa-solid fa-angle-down arrow"></i>
+          </h6>
+          <ul id="ul3">
+            <li><a href="#">تماس با جابینجا</a></li>
+            <li><a href="#">جابینجا در رسانه‌ها</a></li>
+            <li><a href="#">راهنمای استفاده برای کارجویان</a></li>
+            <li><a href="#">وبلاگ</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="social">
+        <h6>جابینجا در شبکه‌های اجتماعی</h6>
+        <div class="icons">
+          <img src="./icon/instagram.png" alt="social">
+          <img src="./icon/twitter.png" alt="social">
+          <img src="./icon/telegram.png" alt="social">
+          <img src="./icon/linkedin.png" alt="social">
+        </div>
+        <div class="text">
+          <img src="./images/logo.png" alt="logo">
+          <p>با معتبرترین شرکت‌های کشور آشنا شوید و محل کار آینده خود را هوشمندانه انتخاب کنید.</p>
+        </div>
+      </div>
+    </div>
+    <span class="copyright">© ۱۴۰۱ - تمامی حقوق برای جابینجا محفوظ است.</span>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
